fix(app): primary card title readability

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -108,10 +108,14 @@ tabset {
 
 /* card specific styling */
 .card {
-  .card-title {
+  .card-title__secondary {
     text-transform: uppercase;
     font-size: 14px;
     color: var(--secondary);
+  }
+  .card-title {
+    font-size: 16px;
+    color: var(--dark);
   }
   .card-header,
   .table thead th,
